feat : add test rest api
- 테스트 api 추가
- swagger 추가
