# docs/swagger.json
@@ -36,13 +36,42 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.PasteResponse"
+                            "$ref": "#/definitions/model.ResponseFormat"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/model.ResponseFormat"
+                        }
+                    }
+                }
+            }
+        },
+        "/paste/test/list": {
+            "get": {
+                "description": "test",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "test",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseFormat"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseFormat"
                         }
                     }
                 }
@@ -65,13 +94,28 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.PasteResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/model.ResponseFormat"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.ExpiredTypeResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/model.ResponseFormat"
                         }
                     }
                 }
@@ -109,7 +153,7 @@
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/model.ErrorResponse"
+                            "$ref": "#/definitions/model.PastErrorResponse"
                         }
                     }
                 }
@@ -117,15 +161,6 @@
         }
     },
     "definitions": {
-        "model.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "해당 Paste를 찾을 수 없습니다."
-                }
-            }
-        },
         "model.ExpireOption": {
             "type": "integer",
             "enum": [
@@ -140,6 +175,25 @@
                 "Expire1Day",
                 "Expire7Days"
             ]
+        },
+        "model.ExpiredTypeResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.PastErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
         },
         "model.PasteRequest": {
             "type": "object",
@@ -159,6 +213,9 @@
         "model.PasteResponse": {
             "type": "object",
             "properties": {
+                "content": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -168,6 +225,18 @@
                 "id": {
                     "type": "string",
                     "example": "abc123"
+                }
+            }
+        },
+        "model.ResponseFormat": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error_message": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         }
